# todo

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  count.rs  delete.rs  list.rs  main.rs  remove.rs  sync.rs  todo_ops.rs  update.rs  utils.rs
