[package]
name = "to-dos"
version = "0.3.0"
edition = "2024"
description = "An easy way to manage your todos"
license = "MIT"
repository = "https://github.com/mostafahagras/todo"
readme = "README.md"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
which = "8.0.0"
