[package]
name = "to-dos"
version = "0.8.2"
edition = "2021"
description = "An easy way to manage your todos"
license = "MIT"
repository = "https://github.com/mostafahagras/todo"
readme = "README.md"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
fuzzy-matcher = "0.3.7"
inquire = "0.7.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
which = "8.0.0"
